# monero-p

./: .gitignore  CMakeLists.txt  CMakeLists_IOS.txt  LICENSE  Makefile  README.md  new_file.txt  wat.sh  wat.txt
src/: CMakeLists.txt  cryptonote_config.h
src/blockchain_db/: CMakeLists.txt  blockchain_db.cpp  blockchain_db.h  locked_txn.h  testdb.h
src/blockchain_utilities/: CMakeLists.txt  README.md  blockchain_ancestry.cpp  blockchain_blackball.cpp  blockchain_depth.cpp  blockchain_export.cpp  blockchain_import.cpp  blockchain_prune.cpp  blockchain_prune_known_spent_data.cpp  blockchain_stats.cpp  blockchain_usage.cpp  blockchain_utilities.h  blocksdat_file.cpp  blocksdat_file.h  bootstrap_file.cpp  bootstrap_file.h  bootstrap_serialization.h
src/blocks/: CMakeLists.txt  blocks.cpp  blocks.h  testnet_cb_dist.dat.bak2
src/checkpoints/: CMakeLists.txt  checkpoints.cpp  checkpoints.h
src/common/: CMakeLists.txt  aligned.c  aligned.h  apply_permutation.h  base58.cpp  base58.h  boost_serialization_helper.h  combinator.cpp  combinator.h  command_line.cpp  command_line.h  common_fwd.h  container_helpers.h  data_cache.h  dns_utils.cpp  dns_utils.h  download.cpp  download.h  error.cpp  error.h  expect.h  http_connection.h  i18n.cpp  i18n.h  json_util.h  notify.cpp  notify.h  one_span_compression.cpp  one_span_compression.h  password.cpp  password.h  perf_timer.cpp  perf_timer.h  pod-class.h  pruning.cpp  pruning.h  rpc_client.h  scoped_message_writer.h  sfinae_helpers.h  spawn.cpp  (+14 more)
src/crypto/: CMakeLists.txt  blake256.c  blake256.h  c_threads.h  chacha.h  crypto-ops-data.c  crypto-ops.c  crypto-ops.h  crypto.cpp  crypto.h  duration.h  generators.cpp  generators.h  generic-ops.h  groestl.h  groestl_tables.h  hash-extra-blake.c  hash-extra-groestl.c  hash-extra-jh.c  hash-extra-skein.c  hash-ops.h  hash.c  hash.h  hmac-keccak.c  hmac-keccak.h  initializer.h  random.c  random.h  rx-slow-hash.c  skein_port.h  slow-hash.c  tree-hash.c
src/cryptonote_basic/: CMakeLists.txt  account.cpp  account.h  account_boost_serialization.h  account_generators.h  blobdatatype.h  connection_context.cpp  connection_context.h  cryptonote_basic.h  cryptonote_basic_impl.cpp  cryptonote_basic_impl.h  cryptonote_boost_serialization.h  cryptonote_format_utils.cpp  cryptonote_format_utils.h  cryptonote_format_utils_basic.cpp  difficulty.cpp  difficulty.h  events.h  fwd.h  hardfork.cpp  hardfork.h  merge_mining.cpp  merge_mining.h  miner.cpp  miner.h  subaddress_index.h  tx_extra.h  verification_context.h
src/cryptonote_core/: CMakeLists.txt  blockchain.cpp  blockchain.h  blockchain_and_pool.h  blockchain_storage_boost_serialization.h  cryptonote_core.cpp  cryptonote_core.h  cryptonote_tx_utils.cpp  cryptonote_tx_utils.h  i_core_events.h  ordinals_container.cpp  ordinals_container.h  tx_pool.cpp  tx_pool.h  tx_sanity_check.cpp  tx_sanity_check.h  tx_verification_utils.cpp  tx_verification_utils.h
src/cryptonote_protocol/: CMakeLists.txt  block_queue.cpp  block_queue.h  cryptonote_protocol_defs.h  cryptonote_protocol_handler-base.cpp  cryptonote_protocol_handler.h  cryptonote_protocol_handler.inl  cryptonote_protocol_handler_common.h  enums.h  fwd.h  levin_notify.cpp  levin_notify.h
src/daemon/: CMakeLists.txt  command_line_args.h  command_parser_executor.cpp  command_parser_executor.h  command_server.cpp  command_server.h  core.h  daemon.cpp  daemon.h  executor.cpp  executor.h  main.cpp  p2p.h  protocol.h  rpc.h  rpc_command_executor.cpp  rpc_command_executor.h
src/daemonizer/: CMakeLists.txt  daemonizer.h  posix_daemonizer.inl  posix_fork.h  windows_daemonizer.inl  windows_service.cpp  windows_service.h  windows_service_runner.h
src/debug_utilities/: CMakeLists.txt  cn_deserialize.cpp  dns_checks.cpp  object_sizes.cpp
src/device/: CMakeLists.txt  device.cpp  device.hpp  device_cold.hpp  device_default.cpp  device_default.hpp  device_io.hpp  device_io_hid.cpp  device_io_hid.hpp  device_ledger.cpp  device_ledger.hpp  log.cpp  log.hpp
src/device_trezor/: CMakeLists.txt  device_trezor.cpp  device_trezor.hpp  device_trezor_base.cpp  device_trezor_base.hpp  trezor.hpp
src/gen_multisig/: CMakeLists.txt  gen_multisig.cpp
src/gen_ssl_cert/: CMakeLists.txt  gen_ssl_cert.cpp
src/hardforks/: CMakeLists.txt  hardforks.cpp  hardforks.h
src/lmdb/: CMakeLists.txt  database.cpp  database.h  error.cpp  error.h  key_stream.h  table.cpp  transaction.h  util.h  value_stream.cpp  value_stream.h
src/mnemonics/: CMakeLists.txt  chinese_simplified.h  dutch.h  electrum-words.cpp  electrum-words.h  english.h  english_old.h  esperanto.h  french.h  german.h  italian.h  japanese.h  language_base.h  lojban.h  portuguese.h  russian.h  singleton.h  spanish.h
src/multisig/: CMakeLists.txt  multisig.cpp  multisig.h  multisig_account.cpp  multisig_account.h  multisig_account_kex_impl.cpp  multisig_clsag_context.cpp  multisig_clsag_context.h  multisig_kex_msg.cpp  multisig_kex_msg.h  multisig_kex_msg_serialization.h  multisig_tx_builder_ringct.cpp  multisig_tx_builder_ringct.h
src/net/: CMakeLists.txt  dandelionpp.cpp  dandelionpp.h  error.cpp  error.h  fwd.h  http.cpp  http.h  i2p_address.cpp  i2p_address.h  parse.cpp  parse.h  resolve.cpp  resolve.h  socks.cpp  socks.h  socks_connect.cpp  socks_connect.h  tor_address.cpp  tor_address.h  zmq.cpp  zmq.h
src/p2p/: CMakeLists.txt  net_node.cpp  net_node.h  net_node.inl  net_node_common.h  net_peerlist.cpp  net_peerlist.h  net_peerlist_boost_serialization.h  p2p_protocol_defs.h
src/ringct/: CMakeLists.txt  bulletproofs.cc  bulletproofs.h  bulletproofs_plus.cc  bulletproofs_plus.h  multiexp.cc  multiexp.h  rctCryptoOps.c  rctCryptoOps.h  rctOps.cpp  rctOps.h  rctSigs.cpp  rctSigs.h  rctTypes.cpp  rctTypes.h
src/rpc/: CMakeLists.txt  bootstrap_node_selector.cpp  bootstrap_node_selector.h  core_rpc_server.cpp  core_rpc_server.h  core_rpc_server_commands_defs.h  core_rpc_server_error_codes.h  daemon_handler.cpp  daemon_handler.h  daemon_messages.cpp  daemon_messages.h  daemon_rpc_version.h  fwd.h  (+19 more)
translations/: CMakeLists.txt  generate_translations_header.c
(+423 files in other folders)
